# KernelOpt

./: .gitmodules  CMakeLists.txt  allocator.hpp  config.hpp  graph.hpp  graph_visit.cpp  graph_visit.hpp  naive_matmul.cpp  omp_matmul.cpp  onednn_utils.hpp  opt_gemm.hpp  ref_matmul.cpp  test_graph.cpp  test_matmul.cpp  test_opt_matmul.cpp  test_pytorch.py  utils.hpp
